[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/Actions/ShopAction/ItemPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Actions/ShopAction/ItemPanelShop.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.529412, 0.509804, 0.509804, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 50
corner_detail = 13

[node name="ItemPanelShop" groups=["item_panel_shop"] instance=ExtResource( 1 )]
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Sell 1" parent="." index="4"]
text = "Buy 1"

[node name="Sell Half" parent="." index="5"]
text = "Buy Half"

[node name="Sell All" parent="." index="6"]
text = "Buy All"

[connection signal="pressed" from="Sell 1" to="." method="_on_Buy_1_pressed"]
[connection signal="pressed" from="Sell Half" to="." method="_on_Buy_Half_pressed"]
[connection signal="pressed" from="Sell All" to="." method="_on_Buy_All_pressed"]
